--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="stylesheet" href="/css/stylelibs.min.css">
+    <link rel="stylesheet" href="/css/stylelibs.min.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>CFD-REACT-SHOP</title>
+    <title>Freshnesecom</title>
 </head>
 
 <body>
